# torchlite-backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.build  README.md  README.org  dev_config.yaml  docker-compose.yml  docker-entrypoint.sh  env-develop  log_conf.yaml  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml  lint.yml  mypy-pr.yml.bak  pr-lint.yml
app/: __init__.py  config.py  database.py  logutils.py  main.py  persisters.py  torchlite.py
app/models/: db.py  ef.py  tokens.py  torchlite.py
app/persisters/: __init__.py
app/routers/: dashboards.py  data.py  widgets.py  worksets.py
app/services/: ef_api.py  middleware.py
app/widgets/: __init__.py
doc/: apidoc.org  config.yaml  demo.org  sample_worksets.yaml
htrc/ef/: __init__.py  api.py
htrc/ef/datamodels/: __init__.py
htrc/torchlite/: __init__.py  app.py  config.py  config.yaml  converters.py  crud.py  dashboards.py  data.py  database.py  errors.py  fake.py  filters.py  http_client.py  main.py  middleware.py  models.py  schemas.py  splash.py  utils.py  version.py  worksets.py
htrc/torchlite/auth/: auth.py
htrc/torchlite/ef/: api.py  exceptions.py  models.py
htrc/torchlite/managers/: workset_manager.py
htrc/torchlite/models/: base.py  dashboard.py  models.py  mongo.py  pydantic.py  schemas.py  workset.py
htrc/torchlite/routers/: dashboards.py  worksets.py
htrc/torchlite/tools/: seed_dashboards.py
htrc/torchlite/widgets/: __init__.py  base.py  mapping_contributor_data.py  publication_date_timeline.py  simple_tag_cloud.py  summary.py
htrc/torchlite/widgets/projectors/: __init__.py
migrations/: env.py
migrations/versions/: 7cd03ebe70fb_adds_dashboards_table.py  bb492cdb70ac_adds_dashboards_table.py
src/: app.py
src/backend/: dashboard.py  filters.py  main.py  torchlite.py  widgets.py
src/htrc/ef/: __init__.py  api.py
src/htrc/ef/datamodels/: __init__.py
src/htrc/torchlite/: __init__.py  dashboards.py  filters.py  worksets.py
src/htrc/torchlite/widgets/: __init__.py
src/htrc/torchlite/widgets/projectors/: __init__.py
stopword_lists/: c9398698-632d-4d6e-9dce-b0533f4ebae0_stopwords.json  french_stopwords.json  german_stopwords.json  spanish_stopwords.json
stubs/ef/: api.pyi
stubs/ef/datamodels/: __init__.pyi
stubs/torchlite/: __init__.pyi  app.pyi  dashboards.pyi  filters.pyi  worksets.pyi
stubs/torchlite/widgets/: __init__.pyi
stubs/torchlite/widgets/projectors/: __init__.pyi
tests/: restclient_demo_setup.txt  restclient_test.txt  test_async_worksets.py  test_dashboard.py  test_dashboards.py  test_map_widget.py  test_timelineprojector.py  test_torchlite.py  test_utils.py  test_volume.py  test_widgets.py  test_workset.py  test_worksets.py
