[tool.poetry]
name = "torchlite"
version = "0.1.0"
description = ""
authors = ["cwulfman <cwulfman@princeton.edu>"]
readme = "README.org"
packages = [
  {include = "htrc", from = "."},
]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
pydantic = "^1.10.6"
fastapi = "^0.95.1"
nltk = "^3.8.1"
uvicorn = "^0.21.1"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.299"
pytest = "^7.2.2"
black = "^23.1.0"
ruff = "^0.0.262"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
